# metodos_numericos_tp1

./: Laplacian.ipynb  matrix.py  pyproject.toml  tests.py
