[tool.poetry]
name = "metodos-numericos-tp1"
version = "0.1.0"
description = ""
authors = ["Horacio Gomez <horaciogomez.1993@gmail.com>"]
readme = "README.md"
packages = [{include = "metodos_numericos_tp1"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
plotly = "^5.16.1"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
